@@ -49,6 +49,15 @@ max_exp_gain_rate: 0
 //1 - eAthena's (uses damage given / max_hp as damage ratio)
 exp_calc_type: 0
 
+//Experience increase per attacker. That is, every additional attacker to the
+// monster makes it give this much more experience
+// (eg: 5 people attack with 25 here, +25*4% -> +100% exp)
+exp_bonus_attacker: 25
+
+//Max number of attackers at which exp bonus is capped
+// (eg: if set at 5, the max bonus is 4*bonus-per-char regardless of attackers)
+exp_bonus_max_attacker: 12
+
 // MVP bonus exp rate. (Note 2) (Note 3)
 mvp_exp_rate: 100
 
